[tool.poetry]
name = "data-visulization"
version = "0.1.0"
description = ""
authors = ["monaSalih <monaalobisat@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3.4"
jupyterlab = "^3.2.1"
sklearn = "^0.0"
matplotlib = "^3.4.3"
seaborn = "^0.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
